KeePassDroid (1.9.10)
 * Add support for the Holo theme on devices > 3.0 from Space Cowboy
 * Add Ukranian translations from andriykopanytsia
 * Add Portugese translations from Carlos Schlyter
 * Japanese translation corrections from Matsuu Takuto
 * Fix x86 key generation compatibility
 * Add 2 thread support to key generation for dual core devices from 
     Mike Mohr
 * Use memory more efficiently in main group view. Prevent out of memory
   crashes when scrolling.


KeePassDroid (1.9.9)
 * Go back to explicitly storing blank fields in the database
   (works around bug in keepassx)
 * Add support for native code on MIPS architectures
 * Adding Vibrate permission. On some devices notifications fail
   without the vibrate permission.

KeePassDroid (1.9.8)
 * Fix crashes related to saving missing entries
 * Fix issues with setting wrong expiry date

KeePassDroid (1.9.7)
  * Add Slovak translation from Typhoon
  * Italian translation updates.
  * iOS KeePass compatibility improvements:
	  * Handle blank dates gracefully
	  * Prevent crash on saving when data is missing.
	  * Don't crash when opening menu in the Entry activity if there is no URL
	  * Don't crash when building search index

KeePassDroid (1.9.6)
  * Fix file association errors for paths with '.'s. (Will now match paths
    with up to 10 dots)
  * Update Norwegian Nynorsk translations
  * Add new icons and market graphics (thanks to Hadley)

KeePassDroid (1.9.5)
  * Update Norwegian Nynorsk translations
  * Resize custom icons

KeePassDroid (1.9.4)
  * Add Japanese translations from Masahiro Inamura
  * Fix issue 183 and 199 from Riksa
  * Change search to work in memory

KeePassDroid (1.9.3.1)
  * Update Italian translations

KeePassDroid (1.9.3)
  * New setting to omit backup and recycle bin entries (based on contribution
    from ABGH)
  * Support databases from KeePass 1.20 (closes: #197)
  * Handle spaces correctly when browsing for keyfiles (closes: #163)